<resources>
    <string name="app_name">CopyHome</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tools_title">工具箱</string>
    <string name="ok">确定</string>
    <string name="back">返回</string>
    <string name="contact">通讯录</string>
    <string name="call">通话管理</string>
    <string name="sms">短信</string>
    <string name="media">多媒体</string>
    <string name="settings">设置</string>
    <string name="wechat">微信</string>
    <string name="yzf">翼支付</string>
    <string name="others">其他应用</string>
    <string name="main_menu">主菜单</string>
    <string name="main_contact">联系人</string>
    <string name="no_sim_card_notice">请插入UIM卡</string>
    <string name="up_key">UP key</string>
    <string name="down_key">Down Key</string>
    <string name="left_key">Left Key</string>
    <string name="right_key">Right Key</string>
    <string name="browser">Browser</string>
    <string name="clock">Clock</string>
    <string name="gallery">Gallery</string>
    <string name="music">Browser</string>
    <string name="camera">Browser</string>
    <string name="services">Browser</string>
    <string name="calendar">Browser</string>
    <string name="fm">Browser</string>
    <string name="sos">Browser</string>
    <string name="recorder">Browser</string>
    <string name="explorer">Browser</string>
    <string name="calc">Browser</string>
    <string name="quick_start_select_title">QuickStart select</string>
    <string name="voice_menu">Browser</string>
    <string name="voice_call">Browser</string>
    <string name="touch_to_speak">press Enter key to say</string>
    <string name="alertdialog_exit_title">Exit?</string>

</resources>
