<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preference_screen_key">
        <Preference
            android:layout="@layout/preference_custom_layout"
            android:key="preference_up"
            android:summary="@string/camera"
            android:title="@string/up_key"/>
        <Preference
            android:layout="@layout/preference_custom_layout"
            android:key="preference_down"
            android:summary="@string/calendar"
            android:title="@string/down_key"/>
        <Preference
            android:layout="@layout/preference_custom_layout"
            android:key="preference_left"
            android:summary="@string/calc"
            android:title="@string/left_key"/>
        <Preference
            android:layout="@layout/preference_custom_layout"
            android:key="preference_right"
            android:summary="@string/fm"
            android:title="@string/right_key"/>

</PreferenceScreen>